@@ -5,6 +5,8 @@ Comprehensive changes can be found in Git change history:
 ## [0.12...]
 ### 2018-01-15
 	Changed: Process path acquisition improved.
+	Fixed: An error with process already exited.
+	Added: Beginnings of proper process analysis. Important for automatic process identification.
 ### 2018-01-14 PARTIALLY INCOMPATIBLE CONFIG
 	Added: Watchlist now has basic search function. Just start typing and it'll highlight anything that has matching names.
 	Changed: Path visibility File and Folder options removed.
